--- a/pom.xml
+++ b/pom.xml
@@ -35,9 +35,9 @@
             <artifactId>quarkus-rest-jackson</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.quarkiverse.couchbase</groupId>
-            <artifactId>quarkus-couchbase</artifactId>
-            <version>1.0.0.Beta2</version>
+           <groupId>io.quarkiverse.couchbase</groupId>
+          <artifactId>quarkus-couchbase</artifactId>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
